# TopoCluster

./: .gitignore  README.md  _config.yml  index.md
Datasets/: README.md
Scripts/: README.md  drawFigure.py  parseCriticalPoints.py  runCriticalPoints.sh
ttk-0.9.7/: .gitignore  simplifyTTK.sh
ttk-0.9.7/core/: CMakeLists.txt
ttk-0.9.7/core/base/ExplicitTopoCluster/: ExplicitTopoCluster.cpp  ExplicitTopoCluster.h
ttk-0.9.7/core/base/abstractMorseSmaleComplex/: AbstractMorseSmaleComplex.h  CMakeLists.txt
ttk-0.9.7/core/base/boundaryMatrix/: CMakeLists.txt  boundarymatrix.cpp  boundarymatrix.h
ttk-0.9.7/core/base/contourTree/: ContourTree.cpp  ContourTree.h
ttk-0.9.7/core/base/crossDissolvePersistenceDiagrams/: CMakeLists.txt  crossDissolvePersistenceDiagrams.cpp  crossDissolvePersistenceDiagrams.h
ttk-0.9.7/core/base/discreteGradient/: CMakeLists.txt  DiscreteGradient.h
ttk-0.9.7/core/base/explicitTopoCluster/: CMakeLists.txt  ExplicitTopoCluster.h  Utils.h
ttk-0.9.7/core/base/fG_PersistentHomology/: CMakeLists.txt  FG_PersistentHomology.cpp  FG_PersistentHomology.h  FG_PersistentHomology_template.h  Usage.h
ttk-0.9.7/core/base/fG_Segmentation/: CMakeLists.txt  FG_Segmentation.cpp  FG_Segmentation.h  FG_Segmentation_template.h
ttk-0.9.7/core/base/formangGradient/: CMakeLists.txt  FormanGradient.cpp  FormanGradient.h
ttk-0.9.7/core/base/ftmTreePP/: CMakeLists.txt
ttk-0.9.7/core/base/gradientForPH/: CMakeLists.txt  GradientForPH.cpp  GradientForPH.h  gradient_template.h  multivariategradient_template.h  outputCells.cpp
ttk-0.9.7/core/base/implicitTopoCluster/: CMakeLists.txt  ImplicitTopoCluster.cpp  ImplicitTopoCluster.h
ttk-0.9.7/core/base/mapFunctionTo3D/: CMakeLists.txt  mapFunctionTo3D.cpp  mapFunctionTo3D.h
ttk-0.9.7/core/base/memoryUsage/: CMakeLists.txt  MemoryUsage.cpp  MemoryUsage.h
ttk-0.9.7/core/base/morseSmaleComplex/: MorseSmaleComplex.h
ttk-0.9.7/core/base/morseSmaleComplex3D/: MorseSmaleComplex3D.h
ttk-0.9.7/core/base/multifieldComparisonMeasure/: CMakeLists.txt  MultifieldComparisonMeasure.cpp  MultifieldComparisonMeasure.h
ttk-0.9.7/core/base/multivariateGradient/: CMakeLists.txt  CriticalClusterGraph.h  MultivariateGradient.cpp  MultivariateGradient.h  multivariategradient_template.h  outputCells.cpp
ttk-0.9.7/core/base/ndPersistentHomology/: CMakeLists.txt  ndPersistentHomology.cpp  ndPersistentHomology.h
ttk-0.9.7/core/base/persistentHomology/: CMakeLists.txt  PersistentHomology.cpp  PersistentHomology.h  boundarymatrix.h  persistenthomology_template.h
ttk-0.9.7/core/base/preprocessStellar/: CMakeLists.txt  Octree.h  PreprocessStellar.cpp  PreprocessStellar.h
ttk-0.9.7/core/base/scalarFieldCriticalPoints/: CMakeLists.txt  ScalarFieldCriticalPoints.h
ttk-0.9.7/core/base/stellarTriangulation/: CMakeLists.txt  StellarTriangulation.cpp  StellarTriangulation.h  octree.h
ttk-0.9.7/core/base/testStellar/: CMakeLists.txt  TestStellar.cpp  TestStellar.h
ttk-0.9.7/core/base/testTopoCluster/: CMakeLists.txt  TestTopoCluster.cpp  TestTopoCluster.h
ttk-0.9.7/core/base/triangulation/: CMakeLists.txt  Triangulation.h
ttk-0.9.7/core/base/unionFind/: UnionFind.cpp  UnionFind.h
ttk-0.9.7/core/vtk/ttkDiscreteGradient/: ttkDiscreteGradient.cpp  ttkDiscreteGradient.h
ttk-0.9.7/core/vtk/ttkFG_PersistentHomology/: CMakeLists.txt  ttkFG_PersistentHomology.cpp  ttkFG_PersistentHomology.h
ttk-0.9.7/core/vtk/ttkFG_Segmentation/: CMakeLists.txt  ttkFG_Segmentation.cpp  (+1 more)
ttk-0.9.7/paraview/FG_PersistentHomology/: CMakeLists.txt  FG_PersistentHomology.xml
ttk-0.9.7/paraview/FG_Segmentation/: CMakeLists.txt  FG_Segmentation.xml
ttk-0.9.7/paraview/GradientForPH/: CMakeLists.txt  GradientForPH.xml
ttk-0.9.7/paraview/MorseSmaleComplex/: MorseSmaleComplex.xml
ttk-0.9.7/paraview/MultifieldComparisonMeasure/: CMakeLists.txt  MultifieldComparisonMeasure.xml
ttk-0.9.7/paraview/MultivariateGradient/: CMakeLists.txt  MultivariateGradient.xml
ttk-0.9.7/paraview/PersistentHomology/: CMakeLists.txt  PersistentHomology.xml
ttk-0.9.7/paraview/PreprocessStellar/: CMakeLists.txt  PreprocessStellar.xml
ttk-0.9.7/paraview/ScalarFieldCriticalPoints/: ScalarFieldCriticalPoints.xml
ttk-0.9.7/paraview/TestStellar/: CMakeLists.txt  TestStellar.xml
ttk-0.9.7/paraview/TestTopoCluster/: CMakeLists.txt  TestTopoCluster.xml
ttk-0.9.7/paraview/crossDissolvePersistenceDiagrams/: CMakeLists.txt  crossDissolvePersistenceDiagrams.xml
ttk-0.9.7/paraview/mapFunctionTo3D/: CMakeLists.txt  mapFunctionTo3D.xml
ttk-0.9.7/paraview/ndPersistentHomology/: CMakeLists.txt  ndPersistentHomology.xml
ttk-0.9.7/standalone/FG_PersistentHomology/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/MultivariateGradient/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/MultivariateGradient/gui/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/PreprocessStellar/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/TestStellar/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/TestTopoCluster/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/crossDissolvePersistenceDiagrams/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/ndPersistentHomology/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/ndPersistentHomology/gui/: CMakeLists.txt  main.cpp
(+60 files in other folders)
